--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>...</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<link rel="stylesheet" type="text/css" href="_bootstrap/css/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 	<!--[if lt IE 9]>
@@ -286,8 +286,8 @@
 
 
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="_jQuery/jquery.min.js"></script>
+	<script src="jQuery/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
-  	<script src="_bootstrap/js/bootstrap.min.js"></script>
+  	<script src="bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
