--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ function startWorker() {
     if(typeof(Worker) !== "undefined") {
         if(typeof(w) == "undefined") {
             w = new Worker("demo_workers.js");
+            console.log(w);
         }
         w.onmessage = function(event) {
             document.getElementById("result").innerHTML = event.data;
