--- a/index.html
+++ b/index.html
@@ -1,37 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head> 
-<meta charset="utf-8"> 
-<title>菜鸟教程(runoob.com)</title> 
+<head>
+    <meta charset="utf-8" />
+    <title>Happy Teacher's day</title>
+    <link rel="shortcut icon" href="img/title.ico" />
 </head>
 <body>
-
-<p>计数： <output id="result"></output></p>
-<button onclick="startWorker()">开始工作</button> 
-<button onclick="stopWorker()">停止工作</button>
-<script>
-var w;
-
-function startWorker() {
-    if(typeof(Worker) !== "undefined") {
-        if(typeof(w) == "undefined") {
-            w = new Worker("demo_workers.js");
-            console.log(w);
-        }
-        w.onmessage = function(event) {
-            document.getElementById("result").innerHTML = event.data;
-        };
-    } else {
-        document.getElementById("result").innerHTML = "抱歉，你的浏览器不支持 Web Workers...";
-    }
-}
-
-function stopWorker() 
-{ 
-    w.terminate();
-    w = undefined;
-}
-</script>
-
+    
+    <audio autoplay loop>
+      <source src="audio/八音工坊 - 如果有你在（Cover 名侦探柯南）.mp3" type="audio/mpeg">
+      您的浏览器不支持 audio 元素。
+    </audio>
+   
 </body>
 </html>
