--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
     		<input id="button" type="button" name="" value="submit" />
     	</form>
     </article>
-    
-    <script type="text/javascript" src="js/ceshi.js"></script>
-   
+    <script type="text/javascript" src="js/validation.js"></script>
 </body>
 </html>
