--- a/index.html
+++ b/index.html
@@ -28,91 +28,143 @@
 			</ul>
 		</div>
 	</header>
-	<article class="article">
-		<div class="article_logo">
-			<div class="logo_left">
-				<img src="img/logo.jpg" alt="logo" />
-			</div>
-			<div class="logo_right">
-				<img src="img/tel.jpg" alt="tel" /><span>24小时服务热线:000-000-000</span>
-			</div>
-		</div>
-		<nav class="nav">
-			<div class="nav_left">
-				<ul>
-					<li><a href="#">首页</a></li>
-					<li><a href="#">在线课程</a></li>
-					<li><a href="#">课程中心</a></li>
-					<li><a href="#">新闻动态</a></li>
-					<li><a href="#">人才招聘</a></li>
-					<li><a href="#">关于慕课</a></li>
-				</ul>
-			</div>
-			<div class="nav_right">
-				<form>
-					<input class="search" type="text" name="" placeholder="&nbsp;&nbsp;search" /><!-- placeholder 用于给输入框添加提示信息  --><input class="button" type="button" name="" value="查询" />
-					<!--两个 input 并行是为了清除默认样式-->
-				</form>
-			</div>
-		</nav>
-		<div id="roasting"><!--焦点图盒子-->
-		  <div class="loading"><img src="img/loading.gif" alt="请稍候..." /></div><!--载入画面(可删除)-->
-		  <div class="pic"><!--内容列表(li数目可随意增减)-->
-		  	<ul>
-		        <li><a href="#"><img src="img/ad_1.jpg" thumb="" alt="" text="1" /></a></li><!-- alt 图片的描述文字 text 图片更详细的描述文字(需要风格支持 可以省略) -->
-		        <li><a href="#"><img src="img/ad_2.jpg" thumb="" alt="" text="2" /></a></li>
-		        <li><a href="#"><img src="img/ad_3.jpg" thumb="" alt="" text="3" /></a></li>
-		  	</ul>
-		  </div>
-		</div>
-		<div class="article_main">
-			<div class="news">
-				<div class="title">
-					<h2>&nbsp;&nbsp;&nbsp;&nbsp;新闻中心</h2><a href="#">More&gt;&gt;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+	<div class="content_main">
+		<article class="article">
+			<div class="article_logo">
+				<div class="logo_left">
+					<img src="img/logo.jpg" alt="logo" />
 				</div>
-				<div class="mews_pic">
-					<img src="img/news.jpg" alt="" />
-					<h2><a href="#">520  慕女神喊你来表白!</a></h2>
-					<p>
-						活动时间：5月20日—5月25日<br /><!-- 用 <br /> 是为了三行话分行显示 -->
-			            获奖公布时间：5月26日<br />
-			            <a href="#">Learn More&gt;&gt;</a>
-					</p>
+				<div class="logo_right">
+					<img src="img/tel.jpg" alt="tel" /><span>24小时服务热线:000-000-000</span>
 				</div>
-				<div class="mews_list">
+			</div>
+			<nav class="nav">
+				<div class="nav_left">
 					<ul>
-				        <li><span>2014-06-01</span> <a href="#">【慕客访谈 用户篇】“有为屌丝”在路上</a></li><!-- 日期放左侧 解决IE浏览器兼容性问题 -->
-				        <li><span>2014-06-01</span><a href="#">【有奖活动】给父亲的三行书信</a></li>
-				        <li><span>2014-05-30</span><a href="#">《程序猿，请晒出你的童年》活动获奖公告</a></li>
-				        <li><span>2014-05-28</span><a href="#" title="">【慕课访谈】破茧成蝶——美女程序员的蜕变史</a></li>
-			        </ul>
+						<li><a href="#">首页</a></li>
+						<li><a href="#">在线课程</a></li>
+						<li><a href="#">课程中心</a></li>
+						<li><a href="#">新闻动态</a></li>
+						<li><a href="#">人才招聘</a></li>
+						<li><a href="#">关于慕课</a></li>
+					</ul>
 				</div>
+				<div class="nav_right">
+					<form>
+						<input class="search" type="text" name="" placeholder="&nbsp;&nbsp;search" /><!-- placeholder 用于给输入框添加提示信息  --><input class="button" type="button" name="" value="查询" />
+						<!--两个 input 并行是为了清除默认样式-->
+					</form>
+				</div>
+			</nav>
+			<div id="roasting"><!--焦点图盒子-->
+			  <div class="loading"><img src="img/loading.gif" alt="请稍候..." /></div><!--载入画面(可删除)-->
+			  <div class="pic"><!--内容列表(li数目可随意增减)-->
+			  	<ul>
+			        <li><a href="#"><img src="img/ad_1.jpg" thumb="" alt="" text="1" /></a></li><!-- alt 图片的描述文字 text 图片更详细的描述文字(需要风格支持 可以省略) -->
+			        <li><a href="#"><img src="img/ad_2.jpg" thumb="" alt="" text="2" /></a></li>
+			        <li><a href="#"><img src="img/ad_3.jpg" thumb="" alt="" text="3" /></a></li>
+			  	</ul>
+			  </div>
 			</div>
-			<div class="course">
-				<div class="course_title">
-					<h2>&nbsp;&nbsp;&nbsp;&nbsp;课程中心</h2><a href="#">More&gt;&gt;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+			<div class="article_main">
+				<div class="news">
+					<div class="title">
+						<h2>&nbsp;&nbsp;&nbsp;&nbsp;新闻中心</h2><a href="#">More&gt;&gt;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+					</div>
+					<div class="mews_pic">
+						<img src="img/news.jpg" alt="" />
+						<h2><a href="#">520  慕女神喊你来表白!</a></h2>
+						<p>
+							活动时间：5月20日—5月25日<br /><!-- 用 <br /> 是为了三行话分行显示 -->
+				            获奖公布时间：5月26日<br />
+				            <a href="#">Learn More&gt;&gt;</a>
+						</p>
+					</div>
+					<div class="mews_list">
+						<ul>
+					        <li><span>2014-06-01</span> <a href="#">【慕客访谈 用户篇】“有为屌丝”在路上</a></li><!-- 日期放左侧 解决IE浏览器兼容性问题 -->
+					        <li><span>2014-06-01</span><a href="#">【有奖活动】给父亲的三行书信</a></li>
+					        <li><span>2014-05-30</span><a href="#">《程序猿，请晒出你的童年》活动获奖公告</a></li>
+					        <li><span>2014-05-28</span><a href="#" title="">【慕课访谈】破茧成蝶——美女程序员的蜕变</a></li>
+				        </ul>
+					</div>
 				</div>
-				<div class="course_pic">
-					<img src="img/css.jpg" alt="" />
-					<h2><a href="#">CSS圆角进化论</a></h2>
-					<p>
-						CSS圆角的实现，经历了三大发展阶段：背景图片方式、CSS2.0+HTML标签模拟、CSS3.0圆角属性）。本案例详细讲解每一种的实现方式，并对实现的优缺点进行对比分析。
-					</p>
-				</div>
-				<div class="product_type">
-			        <ul>
-				        <li><a href="#">PHP开发</a></li>
-				        <li><a href="#">前端开发</a></li>
-				        <li><a href="#">JAVA开发</a></li>
-				        <li><a href="#">Android开发</a></li>
-			        </ul>
-			    </div>
+				<div class="course">
+					<div class="course_title">
+						<h2>&nbsp;&nbsp;&nbsp;&nbsp;课程中心</h2><a href="#">More&gt;&gt;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+					</div>
+					<div class="course_pic">
+						<img src="img/css.jpg" alt="" />
+						<h2><a href="#">CSS圆角进化论</a></h2>
+						<p>
+							CSS圆角的实现，经历了三大发展阶段：背景图片方式、CSS2.0+HTML标签模拟、CSS3.0圆角属性）。本案例详细讲解每一种的实现方式，并对实现的优缺点进行对比分析。
+						</p>
+					</div>
+					<div class="product_type">
+				        <ul>
+					        <li><a href="#">PHP开发</a></li>
+					        <li><a href="#">前端开发</a></li>
+					        <li><a href="#">JAVA开发</a></li>
+					        <li><a href="#">Android开发</a></li>
+				        </ul>
+				    </div>
 
+				</div>
+				<div class="sidebar">
+					<div class="video">
+						<h2>&nbsp;&nbsp;&nbsp;&nbsp;媒体聚焦</h2><a href="#">More&gt;&gt;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+						<video width="230" controls>
+						  <source src="audio/mov_c.mp4" type="video/mp4" />
+						  您的浏览器不支持 HTML5 video 标签
+						</video>
+					</div>
+					<img src="img/app.jpg" alt="" width="230" />
+				</div>
 			</div>
-			<div class="sidebar">
-				
-			</div>
-		</div>
-	</article>
+		</article>
+	</div>
+	<footer>
+		<div class="footer">
+			<ul>
+			    <li>关于
+			        <ul>
+			            <li>品牌故事</li>
+	   		            <li>联系我们</li>
+			            <li>加入我们</li>
+			            <li>版权声明</li>
+			        </ul>
+			    </li>
+			    <li>课程
+			        <ul>
+			            <li>PHP开发</li>
+			            <li>前端开发</li>
+			            <li>JAVA开发</li>
+			            <li>Android开发</li>
+			        </ul>
+			    </li>
+			    <li>关注
+			        <ul>
+			            <li>新浪微博</li>
+			            <li>腾讯微博</li>
+			            <li>企业微信</li>
+			            <li>QQ空间</li>
+			        </ul>
+			    </li>
+			    <li>留言
+			        <ul>
+			            <li>意见反馈</li>
+			            <li>问题留言</li>
+			            <li>媒体联络</li>
+			            <li>在线客服</li>
+			        </ul>
+			    </li>
+			    <li style="border-width: 0; margin-top: -5px;"><img src="img/wechat.png" alt="微信关注" width="30" height="27" />微信关注
+			        <ul>
+			            <li><img src="img/qrcode.jpg" alt="扫描关注慕课网官方微信" width="102" height="102" /></li>
+			        </ul>
+			    </li>
+		    </ul>
+		</div>	
+	</footer>
 </body>
 </html>
