--- a/love/index.html
+++ b/love/index.html
@@ -32,11 +32,14 @@
     <div id="text">
       <div id="code"> <font color="#FF0000"> <span class="say">涵妈妈,教师节快乐,虽然您看不见我对您的祝福</span><br>
         <span class="say"> </span><br>
-        <span class="say"> 我太笨,不会说好听话^∨^</span><br>
+        <span class="say">我太笨,不会说好听话^∨^</span><br>
         <span class="say"> </span><br>
-        <span class="say">怕您说我烦,不敢打扰您,但又忍不住</span><br>
+        <span class="say">胖大妈是女神,永远都是</span><br>
+        <span class="say"> </span><br>
+        <span class="say">怕您嫌弃我烦,不敢打扰您,但又忍不住</span><br>
         <span class="say"></span><br>
-        <span class="say">虽然您看不见我的祝福,但是我还是要把这些心里话说出来</span><br>
+        <span class="say">认识您不久,但是我还是要把心里话说出来</span><br>
+        <span class="say"></span><br>
         <span class="say">老师您要开开心的,伤心难过的时候别忘了还有我</span><br>
         <span class="say"> </span><br>
         <span class="say"><span class="space"></span> -- 乖学生&nbsp;要离--</span> </font>
