--- a/index.html
+++ b/index.html
@@ -1,65 +1,72 @@
 <!DOCTYPE html>
-<html>
+<!-- saved from url=(0034)http://www.bootcss.com/p/unslider/ -->
+<html lang="en">
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title></title>
-	<link rel="stylesheet" href="css/style.css" />
-	<link rel="stylesheet" href="css/unslider.css">
-	<link rel="stylesheet" href="css/unslider-dots.css">
-	<style type="text/css" media="screen">
-	/*	.banner { position: relative; overflow: auto; }
-    .banner li { list-style: none; }
-        .banner ul li { float: left; }*/
-	</style>
+	<meta name="viewport" content="width=device-width" />
+	<title>Unslider 幻灯片</title>
+	<link rel="stylesheet" href="css/unslider.css" />
 </head>
 <body>
 	<div class="banner">
-		<ul>
+		<ul style="width: 400%; position: relative; left: -100%;">
 			<li style="background-image: url('img/sunset.jpg');">
 				<div class="inner">
-					<h1>The jQuery slider that just slides.</h1>
-					<p>就是这个不到3kb的插件！没有奇特的特效或无用的标签。</p>
-
-					<a class="btn" href="#download">下载</a>
+					<h1>测试</h1>
+					<p>这仅仅是一个测试案例</p>
+					<a class="btn" href="">测试</a>
 				</div>
 			</li>
 
 			<li style="background-image: url('img/wood.jpg');">
 				<div class="inner">
-					<h1>Fluid, flexible, fantastically minimal.</h1>
-					<p>Use any HTML in your slides, extend with CSS. You have full control.</p>
-
-					<a class="btn" href="#download">下载</a>
+					<h1>测试</h1>
+					<p>这仅仅是一个测试案例</p>
+					<a class="btn" href="">测试</a>
 				</div>
 			</li>
 
 			<li style="background-image: url('img/subway.jpg');">
 				<div class="inner">
-					<h1>开源</h1>
-					<p>Unslider的所有源码都托管在GitHub上。</p>
-
-					<a class="btn" href="//github.com/idiot/unslider">参与</a>
+					<h1>测试</h1>
+					<p>这仅仅是一个测试案例</p>
+					<a class="btn" href="">测试</a>
 				</div>
 			</li>
 
 			<li style="background-image: url('img/shop.jpg');">
 				<div class="inner">
-					<h1>Uh, that’s about it.</h1>
-					<p>I just wanted to show you another slide.</p>
-
-					<a class="btn" href="#download">下载</a>
+					<h1>测试</h1>
+					<p>这仅仅是一个测试案例</p>
+					<a class="btn" href="">测试</a>
 				</div>
 			</li>
 		</ul>
+		<!-- <ol class="dots">
+			<li class="dot">1</li>
+			<li class="dot active">2</li>
+			<li class="dot">3</li>
+			<li class="dot">4</li>
+		</ol> -->
 	</div>
-
-	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="js/unslider.js"></script> <!-- but with the right path! -->
-	<!-- <script src="js/swie.js"></script> -->
-	<!-- <script src="js/event.js"></script> -->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery.event.move.js"></script>
+	<script src="js/jquery.event.swipe.js"></script>
+	<script src="js/unslider.min.js"></script>
 	<script>
-		$(function() { $('.banner').unslider() })
+			// if(window.chrome) {
+			// 	$('.banner li').css('background-size', '100% 100%');
+			// }
+			$('.banner').unslider({
+				arrows: true,
+				speed: 500,               //  The speed to animate each slide (in milliseconds)
+				delay: 2000,              //  The delay between slide animations (in milliseconds)
+				//complete: function() {},  //  A function that gets called after every slide animation
+				keys: true,               //  Enable keyboard (left, right) arrow shortcuts
+				dots: true,               //  Display dot navigation
+				fluid: true             //  Support responsive design. May break non-responsive designs
+			});
 	</script>
 </body>
 </html>
