--- a/index.html
+++ b/index.html
@@ -13,33 +13,41 @@
 		<ul style="width: 400%; position: relative; left: -100%;">
 			<li style="background-image: url('img/sunset.jpg');">
 				<div class="inner">
-					<h1>测试</h1>
-					<p>这仅仅是一个测试案例</p>
+					<h1>The jQuery slider that just slides</h1>
+					<p>I just wanted to show you another slide</p>
 					<a class="btn" href="">测试</a>
 				</div>
 			</li>
 
 			<li style="background-image: url('img/wood.jpg');">
 				<div class="inner">
-					<h1>测试</h1>
-					<p>这仅仅是一个测试案例</p>
-					<a class="btn" href="">测试</a>
+					<h1>Fluid flexible fantastically minimal</h1>
+					<p>Use any HTML in your slides extend with CSS You have full control</p>
+					<a class="btn" href="">下载</a>
 				</div>
 			</li>
 
 			<li style="background-image: url('img/subway.jpg');">
 				<div class="inner">
-					<h1>测试</h1>
-					<p>这仅仅是一个测试案例</p>
+					<h1>开源</h1>
+					<p>Unslider的所有源码都托管在GitHub上</p>
 					<a class="btn" href="">测试</a>
 				</div>
 			</li>
 
 			<li style="background-image: url('img/shop.jpg');">
 				<div class="inner">
-					<h1>测试</h1>
-					<p>这仅仅是一个测试案例</p>
+					<h1>Uh that is about it</h1>
+					<p>I just wanted to show you another slide</p>
 					<a class="btn" href="">测试</a>
+				</div>
+			</li>
+
+			<li style="background-image: url('img/wood.jpg');">
+				<div class="inner">
+					<h1>Fluid flexible fantastically minimal</h1>
+					<p>Use any HTML in your slides extend with CSS You have full control</p>
+					<a class="btn" href="">下载</a>
 				</div>
 			</li>
 		</ul>
@@ -59,7 +67,7 @@
 			// 	$('.banner li').css('background-size', '100% 100%');
 			// }
 			$('.banner').unslider({
-				arrows: true,
+				// arrows: true,
 				speed: 500,               //  The speed to animate each slide (in milliseconds)
 				delay: 2000,              //  The delay between slide animations (in milliseconds)
 				//complete: function() {},  //  A function that gets called after every slide animation
