--- a/index.html
+++ b/index.html
@@ -41,65 +41,6 @@
 	</div>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/unslider.min.js"></script>
-	<script>
-			var index_li=0;
-			$('.banner').unslider({
-				speed: 500,               
-				delay: 5000,              
-				complete: function() {
-					index_li++;
-				},  
-				keys: true,               
-				dots: true,   
-				fluid: true             
-			});
-			var banner_ul=document.getElementById('banner_ul');
-			function load() {
-			var banner=document.getElementById('banner');
-				banner.addEventListener('touchstart',touch, false);
-				banner.addEventListener('touchmove',touch, false);
-				banner.addEventListener('touchend',touch, false);
-			function touch (event){
-			    event = event || window.event;
-			    switch(event.type){
-			        case "touchstart":
-			            var touch = event.touches[0];
-			            m = touch.clientX;
-			            break;
-			        case "touchmove":
-			            event.preventDefault();
-			            console.log("手指正在移动中...");
-			            break;
-			        case "touchend":
-			            event.preventDefault();
-			            n= event.changedTouches[0].clientX;
-			            var banner_ul=document.getElementById('banner_ul');
-			            if(m-n>50){
-			            	index_li++;
-			            	if(index_li>3){
-			            		index_li=0;
-			            	}
-			            	console.log(index_li);
-			            	if (index_li==0) {banner_ul.style.left="0%";}
-			            	else if (index_li==1) {banner_ul.style.left="-100%";}
-			            	else if (index_li==2) {banner_ul.style.left="-200%";}
-			            	else if (index_li==3) {banner_ul.style.left="-300%";}
-			            }
-			            if(n-m>50){
-			                index_li--;
-			                if (index_li<0) {index_li=3;}
-			                console.log(index_li);
-			            	if (index_li==0) {banner_ul.style.left="0%";}
-			            	else if (index_li==1) {banner_ul.style.left="-100%";}
-			            	else if (index_li==2) {banner_ul.style.left="-200%";}
-			            	else if (index_li==3) {banner_ul.style.left="-300%";}
-			            }
-			           
-			            break;
-			    }    
-			}
-		}
-		window.addEventListener('load',load, false);
-	</script>
+	<script src="js/change.js"></script>
 </body>
 </html>
