--- a/index.html
+++ b/index.html
@@ -3,12 +3,76 @@
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+
+	<meta name="description" content="启航教育艺术中心是全市(开封市)唯一一家以舞台历练、社会实践为宗旨的培训学校，通过舞台的历练，让学生认识自我、了解自我、展示自我。旗下有三大品牌：启航舞校、启航美校、启航教育文化班。" />
+	<meta name="keywords" content="启航教育 启航舞校 启航美校 启航教育文化班" />
+	<meta name="author" content="Yaoli" />
+
+	<link rel="shortcut icon" href="img/school_128px_1193177_easyicon.net.ico" />
+
+	<!-- Set favicons -->
+	<link rel="icon" href="img/school_128px_1193177_easyicon.net.ico" /><!-- favicons 网站图标 -->
+
+	<!-- Use title if it's in the page YAML frontmatter -->
+	<title>启航教育</title>
+
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/unslider.css" />
-	
-		
+
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </head>
 <body>
+	<nav class="navbar navbar-default" style="margin-bottom: 0;">
+	  	<div class="container-fluid">
+	    	<!-- Brand and toggle get grouped for better mobile display -->
+	    	<div class="navbar-header">
+	      		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+			        <span class="sr-only">Toggle navigation</span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+			        <span class="icon-bar"></span>
+	      		</button>
+	      		<a class="navbar-brand" href="#">
+	      			<img src="img/new image - 9y86c.png" width="52" alt="logo" style="margin-top: -15px" />
+	      		</a>
+	    	</div>
+
+	    	<!-- Collect the nav links, forms, and other content for toggling -->
+	    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      		<ul class="nav navbar-nav">
+			        <li class="active"><a href="#">学校概况 <span class="sr-only">(current)</span></a></li>
+			        <li><a href="#">现任领导</a></li>
+			        <li class="dropdown">
+	          		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">学院设置 <span class="caret"></span></a>
+	          			<ul class="dropdown-menu">
+				            <li><a href="#">文化教育学院</a></li>
+				            <li><a href="#">美术学院</a></li>
+				            <li><a href="#">舞蹈学院</a></li>
+				            <li role="separator" class="divider"></li>
+				            <li><a href="#">详情咨询</a></li>
+	          			</ul>
+	        		</li>
+	        		<li><a href="#">师资队伍</a></li>
+	        		<li><a href="#">招生通知</a></li>
+			        <li class="dropdown">
+	          		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">校区分布 <span class="caret"></span></a>
+	          			<ul class="dropdown-menu">
+				            <li><a href="#">夷山校区</a></li>
+				            <li><a href="#">杏花营校区</a></li>
+				            <li><a href="#">祥符校区</a></li>
+				            <li><a href="#">农场校区</a></li>
+				            <li role="separator" class="divider"></li>
+				            <li><a href="#">联系我们</a></li>
+	          			</ul>
+	        		</li>
+	        		<li><a href="#">其他</a></li>
+	      		</ul>
+	      	</div><!-- /.navbar-collapse -->
+	  	</div><!-- /.container-fluid -->
+	</nav>
+
 	<div class="banner" id="banner">
 		<ul id="banner_ul" style="width: 400%; position: relative; left: 0%;">
 			<li style="background-image: url('img/sunset.jpg');">
@@ -41,7 +105,6 @@
 			</li>
 		</ul>
 	</div>
-	<script src="js/jquery.min.js"></script>
 	<script src="js/unslider.min.js"></script>
 	<script src="js/change.js"></script>
 </body>
