--- a/index.html
+++ b/index.html
@@ -1,111 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-
-	<meta name="description" content="启航教育艺术中心是全市(开封市)唯一一家以舞台历练、社会实践为宗旨的培训学校，通过舞台的历练，让学生认识自我、了解自我、展示自我。旗下有三大品牌：启航舞校、启航美校、启航教育文化班。" />
-	<meta name="keywords" content="启航教育 启航舞校 启航美校 启航教育文化班" />
-	<meta name="author" content="Yaoli" />
-
-	<link rel="shortcut icon" href="img/school_128px_1193177_easyicon.net.ico" />
-
-	<!-- Set favicons -->
-	<link rel="icon" href="img/school_128px_1193177_easyicon.net.ico" /><!-- favicons 网站图标 -->
-
-	<!-- Use title if it's in the page YAML frontmatter -->
-	<title>启航教育</title>
-
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/unslider.css" />
-
-	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<title>触屏事件</title>
+	<link rel="stylesheet" href="" />
+	<style type="text/css" media="screen">
+		div{
+			width: 85%;
+			height: 55px;
+			line-height: 55px;
+			text-align: center;
+			border-radius: 5px;
+			margin: 0 auto;
+			margin-bottom: 5px;
+			background-color: rgba(230, 58, 52,0.82);
+			color: rgba(205,205,205,1.0);
+		}
+	</style>
 </head>
 <body>
-	<nav class="navbar navbar-default" style="margin-bottom: 0;">
-	  	<div class="container-fluid">
-	    	<!-- Brand and toggle get grouped for better mobile display -->
-	    	<div class="navbar-header">
-	      		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-			        <span class="sr-only">Toggle navigation</span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-	      		</button>
-	      		<a class="navbar-brand" href="#">
-	      			<img src="img/new image - 9y86c.png" width="52" alt="logo" style="margin-top: -15px" />
-	      		</a>
-	    	</div>
-
-	    	<!-- Collect the nav links, forms, and other content for toggling -->
-	    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      		<ul class="nav navbar-nav">
-			        <li class="active"><a href="#">学校概况 <span class="sr-only">(current)</span></a></li>
-			        <li><a href="#">现任领导</a></li>
-			        <li class="dropdown">
-	          		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">学院设置 <span class="caret"></span></a>
-	          			<ul class="dropdown-menu">
-				            <li><a href="#">文化教育学院</a></li>
-				            <li><a href="#">美术学院</a></li>
-				            <li><a href="#">舞蹈学院</a></li>
-				            <li role="separator" class="divider"></li>
-				            <li><a href="#">详情咨询</a></li>
-	          			</ul>
-	        		</li>
-	        		<li><a href="#">师资队伍</a></li>
-	        		<li><a href="#">招生通知</a></li>
-			        <li class="dropdown">
-	          		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">校区分布 <span class="caret"></span></a>
-	          			<ul class="dropdown-menu">
-				            <li><a href="#">夷山校区</a></li>
-				            <li><a href="#">杏花营校区</a></li>
-				            <li><a href="#">祥符校区</a></li>
-				            <li><a href="#">农场校区</a></li>
-				            <li role="separator" class="divider"></li>
-				            <li><a href="#">联系我们</a></li>
-	          			</ul>
-	        		</li>
-	        		<li><a href="#">其他</a></li>
-	      		</ul>
-	      	</div><!-- /.navbar-collapse -->
-	  	</div><!-- /.container-fluid -->
-	</nav>
-
-	<div class="banner" id="banner">
-		<ul id="banner_ul" style="width: 400%; position: relative; left: 0%;">
-			<li style="background-image: url('img/sunset.jpg');">
-				<div class="inner">
-					<h1>The jQuery slider that just slides</h1>
-					<p>I just wanted to show you another slide</p>
-					<a class="btn" href="">测试</a>
-				</div>
-			</li>
-			<li style="background-image: url('img/wood.jpg');">
-				<div class="inner">
-					<h1>Fluid flexible fantastically minimal</h1>
-					<p>Use any HTML in your slides extend with CSS You have full control</p>
-					<a class="btn" href="">下载</a>
-				</div>
-			</li>
-			<li style="background-image: url('img/subway.jpg');">
-				<div class="inner">
-					<h1>开源</h1>
-					<p>Unslider的所有源码都托管在GitHub上</p>
-					<a class="btn" href="">测试</a>
-				</div>
-			</li>
-			<li style="background-image: url('img/shop.jpg');">
-				<div class="inner">
-					<h1>Uh that is about it</h1>
-					<p>I just wanted to show you another slide</p>
-					<a class="btn" href="">测试</a>
-				</div>
-			</li>
-		</ul>
-	</div>
-	<script src="js/unslider.min.js"></script>
-	<script src="js/change.js"></script>
+	<div id="tap">tap</div>
+	<div id="click">click</div>
+	<div id="touchstart">touchstart</div>
+	<div id="touchmove">touchmove</div>
+	<div id="touchend">touchend</div>
+	<div id="touchcancel">touchcancel</div>
+	<div id="swipe">swipe</div>
+	<div id="swipeLeft">swipeLeft</div>
+	<div id="swipeRight">swipeRight</div>
+	<div id="swipeUp" style="height: 85px; line-height: 85px;">swipeUp</div>
+	<div id="swipeDown" style="height: 85px; line-height: 85px;">swipeDown</div>
+	<div id="longTap">longTap</div>
+	<div id="singleTap">singleTap</div>
+	<div id="doubleTap">doubleTap</div>
+	<script>
+		document.getElementById('tap').addEventListener("tap",function (event) { alert("tap");} );
+		document.getElementById('click').addEventListener("click",function (event) { alert("click");} );
+		document.getElementById('touchstart').addEventListener("touchstart",function (event) { alert("touchstart");} );
+		document.getElementById('touchmove').addEventListener("touchmove",function (event) { alert("touchmove");} );
+		document.getElementById('touchend').addEventListener("touchend",function (event) { alert("touchend");} );
+		document.getElementById('touchcancel').addEventListener("touchcancel",function (event) { alert("touchcancel");} );
+		document.getElementById('swipe').addEventListener("swipe",function (event) { alert("swipe");} );
+		document.getElementById('swipeLeft').addEventListener("swipeLeft",function (event) { alert("swipeLeft");} );
+		document.getElementById('swipeRight').addEventListener("swipeRight",function (event) { alert("swipeRight");} );
+		document.getElementById('swipeUp').addEventListener("swipeUp",function (event) { alert("swipeUp");} );
+		document.getElementById('swipeDown').addEventListener("swipeDown",function (event) { alert("swipeDown");} );
+		document.getElementById('longTap').addEventListener("longTap",function (event) { alert("longTap");} );
+		document.getElementById('singleTap').addEventListener("singleTap",function (event) { alert("singleTap");} );
+		document.getElementById('doubleTap').addEventListener("doubleTap",function (event) { alert("doubleTap");} );
+	</script>
 </body>
 </html>
